--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.url=jdbc:mysql://localhost/vollmed_api_v2
 spring.datasource.username=root
 spring.datasource.password=8956
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
